# jsonrpcForCpp

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  fix.md
docs/: architecture.md  mainpage.md  tutorial.md
examples/: CMakeLists.txt  README.md
examples/async_client/: main.cpp
examples/batch_request/: main.cpp
examples/calculator/: calculator_client.cpp  calculator_server.cpp
examples/error_handling/: main.cpp
examples/timeout_retry/: main.cpp
examples/type_conversion/: main.cpp
include/jsonrpc/: client.hpp  config.hpp  errors.hpp  jsonrpc.hpp  server.hpp  types.hpp
include/jsonrpc/detail/: client_session.hpp  function_traits.hpp  index_sequence.hpp  method_registry.hpp  method_wrapper.hpp  protocol.hpp  server_session.hpp  type_converter.hpp
include/jsonrpc/impl/: client.ipp  client_session.ipp  method_registry.ipp  protocol.ipp  server.ipp  server_session.ipp  types.ipp
scripts/: download_boost.bat  download_boost.sh
src/: CMakeLists.txt  client.cpp  client_session.cpp  method_registry.cpp  protocol.cpp  server.cpp  server_session.cpp  types.cpp
tests/: CMakeLists.txt  test_client.cpp  test_integration.cpp  test_protocol.cpp  test_server.cpp  test_type_converter.cpp  test_types.cpp
